# GridLib

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
.github/workflows/: cmake.yml
extras/: CMakeLists.txt
extras/DemFiles/: CMakeLists.txt
extras/DemFiles/include/GridLib/: ReadDem.hpp
extras/DemFiles/src/GridLib/: DemReader.cpp  DemReader.hpp  FortranReader.cpp  FortranReader.hpp  ParseNumber.cpp  ParseNumber.hpp  ReadDem.cpp  RecordA.cpp  RecordC.cpp
extras/grid2json/: CMakeLists.txt  grid2json.cpp
extras/grid2png/: CMakeLists.txt  grid2png.cpp
extras/stitchgrids/: CMakeLists.txt  stitchgrids.cpp
include/GridLib/: Contour.hpp  Crs.hpp  Grid.hpp  GridInterpolator.hpp  GridLibException.hpp  GridMemberTypes.hpp  GridModel.hpp  GridView.hpp  IGrid.hpp  IGridMetadata.hpp  Index.hpp  MultiGridReader.hpp  PositionTransformer.hpp  Profile.hpp  Rasterize.hpp  ReadGrid.hpp  ReadJsonGrid.hpp  Size.hpp  SpatialData.hpp  SpatialInfo.hpp  Unit.hpp  WriteGrid.hpp  WriteJsonGrid.hpp
misc/Abandoned/extras/tiled_grid/SqliteTools/: Connection.cpp  Connection.h  Execute.h  PreparedStatement.cpp  PreparedStatement.h  SqliteException.cpp  SqliteException.h  Transaction.cpp  Transaction.h
misc/Abandoned/include/GridLib/: GridRect.hpp  ModelMatrix.hpp  ResampleGrid.hpp
misc/Abandoned/src/GridLib/: GridRect.cpp  ResampleGrid.cpp
misc/Abandoned/src/GridLib/Utilities/: Utm.cpp
misc/Abandoned/tests/: test_GridRect.cpp
misc/examples/: NDH Lofoten 2pkt 2017-33-1-484-313-03-dtm.tif  NDH Lofoten 2pkt 2017-33-1-484-313-67-dtm.tif  dom1.dem
src/Dem/: CMakeLists.txt
src/Dem/include/GridLib/: ReadDem.hpp
src/Dem/src/GridLib/: DemReader.cpp  DemReader.hpp  FortranReader.cpp  FortranReader.hpp  ParseNumber.cpp  ParseNumber.hpp  PrintMacros.hpp  ReadDem.cpp  RecordA.cpp  RecordA.hpp  RecordB.cpp  RecordB.hpp  RecordC.cpp  RecordC.hpp
src/DemFiles/: CMakeLists.txt
src/DemFiles/include/GridLib/: ReadDem.hpp
src/DemFiles/src/GridLib/: DemReader.hpp  FortranReader.hpp  ParseNumber.cpp  ReadDem.cpp  RecordA.hpp  RecordB.cpp  RecordB.hpp
src/GeoTiff/: CMakeLists.txt
src/GeoTiff/include/GridLib/: ReadGeoTiff.hpp
src/GeoTiff/src/GridLib/: ReadGeoTiff.cpp
src/GridLib/: Contour.cpp  Crs.cpp  Grid.cpp  GridBuilder.cpp  GridBuilder.hpp  GridInterpolator.cpp  GridLibVersion.hpp.in  GridMemberTypes.cpp  GridModel.cpp  GridSomething.hpp  GridView.cpp  IGrid.cpp  MultiGridReader.cpp  PositionTransformer.cpp  Profile.cpp  Rasterize.cpp  ReadGrid.cpp  ReadJsonGrid.cpp  SpatialData.cpp  SpatialInfo.cpp  Unit.cpp  WriteGrid.cpp  WriteJsonGrid.cpp
src/GridLib/Utilities/: CoordinateSystem.cpp  CoordinateSystem.hpp  ReadOnlyStreamBuffer.hpp  TemporaryFile.cpp  TemporaryFile.hpp  Utm.cpp  Utm.hpp
tests/: CMakeLists.txt  TestData.cpp.in  TestData.hpp  dem_file.hpp.in  geotiff_file.hpp.in  test_Contour.cpp  test_GridInterpolator.cpp  test_GridView.cpp  test_MultiGridReader.cpp  test_PositionTransformer.cpp  test_Profile.cpp  test_Rasterize.cpp  test_ReadAndWriteGrid.cpp  test_ReadDem.cpp  test_ReadGeoTiff.cpp
